correct a style problem on mobile devices

--- a/web-front/src/components/projects.css
+++ b/web-front/src/components/projects.css
@@ -102,6 +102,13 @@
 }
 
 @media screen and (max-width:600px) {
+  .projects-section {
+    width: 100%;
+    margin-left: 0%;
+    padding-top: 180px;
+    margin-top: -160px;
+  }
+
   .projects-container {
     width: 90%;
     margin-left: 5%;
